<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="5dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/deviceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deviceName"
            android:textColor="@color/abc_primary_text_material_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/deviceName"
            android:text="Name"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/ipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipLabel"
            android:textColor="@color/abc_primary_text_material_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/deviceIp"
            android:text="@string/ipPlaceholder"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/macLabel"
            android:text="@string/mac_label"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_primary_text_material_light"/>

        <TextView
            android:id="@+id/macAdd"
            android:text="@string/macHolder"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
