<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2011 The Serval Project
 * 
 * This file is part of Serval Software (http://www.servalproject.org)
 * 
 * Serval Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU
  General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 -->

<!-- @author Romana Challans <romana@servalproject.org> -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dex_protect_features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:id="@+id/statusLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/sidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/batphoneNumberText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/setphone"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="32"
                android:singleLine="true" />

            <EditText
                android:id="@+id/batphoneNameText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/setname"
                android:imeOptions="actionDone"
                android:maxLength="32"
                android:singleLine="true" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/phoneInstr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/batphoneNameText"
        android:layout_margin="10dp"
        android:text="@string/phoneInstr" />

    <Button
        android:id="@+id/btnPhOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneInstr"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btnPhOk"
        android:textColor="#fff" />

    <requestFocus />

</LinearLayout>